WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304705
[Debug][GStreamer] ASSERTION FAILED: canSafelyBeUsed(); TF::WeakPtr<WebCore::GStreamerVideoFrameConverter, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> >::get() const
https://bugs.webkit.org/show_bug.cgi?id=304705
Summary
[Debug][GStreamer] ASSERTION FAILED: canSafelyBeUsed(); TF::WeakPtr<WebCore::...
Claudio Saavedra
Reported
2025-12-26 05:04:16 PST
STDERR: ASSERTION FAILED: canSafelyBeUsed() STDERR: WTF/Headers/wtf/WeakPtr.h(117) : T* WTF::WeakPtr< <template-parameter-1-1>, WeakPtrImpl, <template-parameter-1-3> >::get() const [with T = WebCore::GStreamerVideoFrameConverter; WeakPtrImpl = WTF::DefaultWeakPtrImpl; PtrTraits = WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>] STDERR: 1 0x7f31770a8947 WTF::WeakPtr<WebCore::GStreamerVideoFrameConverter, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> >::get() const STDERR: 2 0x7f31770a3be4 WTF::RunLoop::Timer::Timer<WebCore::GStreamerVideoFrameConverter>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebCore::GStreamerVideoFrameConverter*, void (WebCore::GStreamerVideoFrameConverter::*)())::{lambda()#1}::operator()() const STDERR: 3 0x7f31770b41c8 WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebCore::GStreamerVideoFrameConverter>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebCore::GStreamerVideoFrameConverter*, void (WebCore::GStreamerVideoFrameConverter::*)())::{lambda()#1}, void>::call() STDERR: 4 0x7f316da1fb6b WTF::Function<void ()>::operator()() const STDERR: 5 0x7f316ec29e96 WTF::RunLoop::Timer::fired() STDERR: 6 0x7f315e131ff9 operator() STDERR: 7 0x7f315e13203d _FUN STDERR: 8 0x7f315e130bc2 operator() STDERR: 9 0x7f315e130c2f _FUN STDERR: 10 0x7f31585c649e ??? STDERR: 11 0x7f31585c6710 g_main_context_dispatch STDERR: 12 0x7f315e1315b3 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) STDERR: 13 0x7f315e131622 WTF::RunLoop::runGLibMainLoop() STDERR: 14 0x7f315e1316ea WTF::RunLoop::run() STDERR: 15 0x7f31707f10a0 WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) STDERR: 16 0x7f31707f0723 int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) STDERR: 17 0x7f31707efe88 WebKit::WebProcessMain(int, char**) STDERR: 18 0x557142dff7ed main STDERR: 19 0x7f315f8181ca __libc_start_call_main STDERR: 20 0x7f315f81828b __libc_start_main STDERR: 21 0x557142dff705 _start
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-12-26 05:32:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55877
EWS
Comment 2
2025-12-26 07:31:50 PST
Committed
304946@main
(c7a581ad4764): <
https://commits.webkit.org/304946@main
> Reviewed commits have been landed. Closing PR #55877 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug