[Debug][GStreamer] ASSERTION FAILED: canSafelyBeUsed(); TF::WeakPtr<WebCore::GStreamerVideoFrameConverter, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> >::get() const https://bugs.webkit.org/show_bug.cgi?id=304705

Reviewed by Philippe Normand.

* Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.h:

Canonical link: https://commits.webkit.org/304946@main